--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-EMAIL_USER=mafeaslaundryshop@gmail.com
-EMAIL_PASS=amxb okwq zhyq ekro
+EMAIL_USER=twinqxx@gmail.com
+EMAIL_PASS=rikg mtwz cefr dorx
 EMAIL_TO=delosreyesjulieanne199@gmail.com
